<resources>
    <string name="app_name">PokerDice</string>
    <string name="new_game">New Game</string>
    <string name="engine">Engine</string>
    <string name="languages">languages</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="play">Play</string>
    <string name="new_player">New Player</string>
    <string name="player_name">Player name</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="select_players">Select Players</string>
</resources>
