<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gboz.pokerdice.NewPlayerActivity">

    <Button
        android:text="@string/create"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/create_button"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/back_button"
        android:layout_alignStart="@+id/back_button"
        android:layout_marginTop="36dp"
        android:layout_alignRight="@+id/back_button"
        android:layout_alignEnd="@+id/back_button" />

    <Button
        android:text="@string/back"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="36dp"
        android:id="@+id/back_button" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="enter a name"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginLeft="174dp"
        android:layout_marginStart="174dp" />

</RelativeLayout>
