<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gboz.pokerdice.NewGameActivity">

    <Button
        android:text="@string/new_player"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/new_player_button"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/play_button"
        android:layout_alignStart="@+id/play_button"
        android:layout_marginTop="36dp"
        android:layout_alignRight="@+id/play_button"
        android:layout_alignEnd="@+id/play_button" />

    <Button
        android:text="@string/play"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="36dp"
        android:id="@+id/play_button" />

    <TextView
        android:text="@string/select_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/new_player_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2" />

    <ListView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/play_button"
        android:layout_below="@+id/textView2" />
    <!--<ListView-->
        <!--android:id="@+id/listViewTest"-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="300dp"-->
        <!--android:layout_below="@+id/textView2"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->


</RelativeLayout>
